--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "sync",
             "type": "shell",
-            "command": ".\\sync.bat",
+            "command": ".\\dev\\universal\\sync.bat",
             "group": {
                 "kind": "build",
                 "isDefault": true
